--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-postcss": "8.0.x",
     "gulp-sass": "4.0.x",
     "gulp-sourcemaps": "2.6.x",
+    "gulp-terser": "^2.1.0",
     "gulp-webp": "^4.0.1",
     "imagemin": "^7.0.1",
     "posthtml-include": "^1.7.2",
