--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "autoprefixer": "^9.8.8",
     "browser-sync": "^2.27.7",
     "gulp": "^4.0.2",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-imagemin": "^6.2.0",
     "gulp-plumber": "1.2.x",
     "gulp-postcss": "8.0.x",
