--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cat-energy-18",
   "version": "17.0.0",
   "private": true,
-  "description": "Личный проект «Кэт энерджи» от HTML Academy",
+  "description": "Тестовое задание",
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "1.x",
     "autoprefixer": "^9.8.8",
@@ -26,7 +26,8 @@
     "stylelint": "stylelint \"source/sass/**/*.scss\" --syntax scss",
     "test": "npm run editorconfig && npm run stylelint",
     "build": "gulp build",
-    "start": "gulp start"
+    "start": "gulp start",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": [
     "last 2 versions",
@@ -44,8 +45,10 @@
   "engines": {
     "node": "8.16"
   },
+  "homepage": "https://mariia22.github.io/Zadanie-testowe-HTML-CSS-JS/",
   "dependencies": {
     "del": "^5.1.0",
+    "gh-pages": "^3.2.3",
     "gulp-csso": "^4.0.1",
     "gulp-dest": "^0.2.3",
     "gulp-htmlmin": "^5.0.1",
@@ -54,5 +57,8 @@
     "gulp-svgstore": "^7.0.1",
     "gulp-uglify": "^3.0.2",
     "readable-stream": "^3.6.0"
+  },
+  "resolutions": {
+    "gift": "^0.10.2"
   }
 }
